--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@tailwindcss/forms": "^0.5.10",
         "alpinejs": "^3.15.0",
         "swiper": "^12.0.2"
     }
